--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,7 @@
 *.xcuserstate
+Frismart.xcodeproj/xcuserdata/jamesl.xcuserdatad/xcschemes/Frismart.xcscheme
+Frismart.xcodeproj/xcuserdata/jamesl.xcuserdatad/xcschemes/xcschememanagement.plist
+Frismart.xcworkspace/xcuserdata/jamesl.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
+Pods/Pods.xcodeproj/xcuserdata/jamesl.xcuserdatad/xcschemes/Pods-Frismart.xcscheme
+Pods/Pods.xcodeproj/xcuserdata/jamesl.xcuserdatad/xcschemes/SwiftyJSON.xcscheme
+Pods/Pods.xcodeproj/xcuserdata/jamesl.xcuserdatad/xcschemes/xcschememanagement.plist
